<resources>
    <string name="app_name">AmiiboAPI</string>

    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="confirm">Confirmer</string>
    <string name="amiibo">Amiibo</string>
    <string name="create_amiibo">Créer un Amiibo</string>
    <string name="delete_amiibo">Supprimer un Amiibo</string>
    <string name="delete_amiibo_warning">Voulez-vous vraiment supprimer l\'Amiibo %1$s?</string>

    <string name="amiibo_series">Série de l\'Amiibo</string>
    <string name="character">Personnage</string>
    <string name="game_series">Jeu vidéo</string>
    <string name="release">Date de sortie</string>

    <string name="amiibos_loaded">Les amiibos ont bien été récupérés.</string>
    <string name="amiibos_loading_error">Désolé, une erreur a empêché la récupération des amiibos.</string>

</resources>
